tests/fail_let_inout2.rte
fun main() {
  let a = 0;
  inout b = a;
  return b; // error: inout can't return ownership because previous owner died
}
